# YOLOv8-Driver-State-Detection-System

./: .gitignore  LICENSE  README-en.md  README-zh.md  README.md  analyzer.py  config.py  convert_model.py  index _v3.html  main.py  models.py  requirements.txt  routes.py
android/: README-en.md  README.md  generate_icons.py  gradlew.bat  install_icons.py  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: yolov8n_pose.ncnn.param
android/app/src/main/java/com/yolo/driver/: DriverApplication.kt  MainActivity.kt  MainViewModel.kt
android/app/src/main/java/com/yolo/driver/analyzer/: CalibrationManager.kt  KeypointDetector.kt  SlidingWindowAnalyzer.kt  StateAnalyzer.kt
android/app/src/main/java/com/yolo/driver/data/: CalibrationData.kt
android/app/src/main/java/com/yolo/driver/ui/: CalibrationActivity.kt  CalibrationViewModel.kt  OverlayView.kt
android/app/src/main/java/com/yolo/driver/ui/compose/: AppNavigation.kt  CalibrationScreen.kt  MainScreen.kt
android/app/src/main/java/com/yolo/driver/ui/compose/components/: CameraPreview.kt  ControlBar.kt  KeypointOverlay.kt  SettingsDialog.kt  StatePanel.kt
android/app/src/main/java/com/yolo/driver/ui/compose/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/yolo/driver/ui/viewmodel/: CalibrationViewModel.kt
android/app/src/main/java/com/yolo/driver/util/: AudioPlayer.kt  CameraController.kt  CameraUtils.kt  KeypointDrawer.kt  VibrationController.kt
android/app/src/main/jni/: CMakeLists.txt  native-lib.cpp  yolov8pose.cpp  yolov8pose.h
android/app/src/main/res/layout/: activity_calibration.xml  activity_main.xml  dialog_settings.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-zh/: strings.xml
android/app_icons/: README.md
